@@ -1,3 +1,7 @@
+2011-10-17
+* RPM specfile fixes
+* enable squashfs variants, plus fix bug in Squashfs LZMA (Broadcom variant)
+
 2011-09-25
 * add more documentation to the user guide
 
